@@ -10,5 +10,5 @@ Makefile.old$
 ^.gitignore
 ~$
 \.bak$
-
+\b(xt\b)?inc\b
 
