@@ -12,6 +12,7 @@ build_requires:
   Test::More: 0.88
   Test::WWW::Mechanize::Catalyst: 0
   URI: 0
+  ok: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
@@ -51,4 +52,4 @@ requires:
   version: 0.77
 resources:
   license: http://opensource.org/licenses/artistic-license.php
-version: 0.001002
+version: 0.001003
