@@ -31,7 +31,8 @@
             "HTTP::Request::Common" : "0",
             "Test::More" : "0.88",
             "Test::WWW::Mechanize::Catalyst" : "0",
-            "URI" : "0"
+            "URI" : "0",
+            "ok" : "0"
          }
       },
       "configure" : {
@@ -72,5 +73,5 @@
          "http://opensource.org/licenses/artistic-license.php"
       ]
    },
-   "version" : "0.001001"
+   "version" : "0.001003"
 }
