@@ -2,7 +2,7 @@ NAME
     Catalyst::Plugin::Cache::HTTP::Preempt - preemptive HTTP cache control
 
 VERSION
-    v0.1.0
+    v0.1.3
 
 REQUIREMENTS
     This module requires Perl v5.10 or later.
@@ -11,11 +11,17 @@ REQUIREMENTS
 
     Catalyst
     DateTime
-    DateTime::Format::HTTP
     HTTP::Message 6.06
     Moose
     Readonly
+
+    Additional modules may be required for running tests:
+
+    DateTime::Format::HTTP
+    Digest::MD5
+    ok
     Test::WWW::Mechanize::Catalyst
+    URI
 
 DESCRIPTION
     This is a Catalyst plugin handles HTTP 1.1 cache-control queries.
