@@ -1,3 +1,10 @@
+2013-01-21 v0.1.3 Robert Rothenberg  <rr@interactive.co.uk>
+
+	* Added ok as a prerequisite for testing
+	* Fixed version number in POD and README
+	* Added author test for prereqs (though it's skipped due to bugs)
+	* Updated MANIFEST.SKIP rules
+
 2013-01-19 v0.1.2 Robert Rothenberg  <rr@interactive.co.uk>
 
 	* Added URI as a prerequisite for testing
